--- a/dev/tutorials/global_identifiability/index.html
+++ b/dev/tutorials/global_identifiability/index.html
@@ -25,26 +25,26 @@ v&#39;(t) = k*y(t) - v(t)*u
 w&#39;(t) = -b*w(t) + c*w(t)*x(t)*y(t) - c*w(t)*q*y(t)
 y2(t) = z(t)
 y1(t) = w(t)</code><br/><code class="language-julia-repl hljs" style="display:block;">julia&gt; @time global_id = assess_identifiability(ode, 0.999)</code><code class="nohighlight hljs ansi" style="display:block;">[ Info: Assessing local identifiability
-[ Info: Local identifiability assessed in 5.507624331 seconds
+[ Info: Local identifiability assessed in 6.374704953 seconds
 [ Info: Assessing global identifiability
 [ Info: Computing IO-equations
-┌ Info: Computed in 8.742994747 seconds
+┌ Info: Computed in 9.958200622 seconds
 │   :ioeq_time = :ioeq_time
-└   ioeq_time = 8.742994747
+└   ioeq_time = 9.958200622
 [ Info: Computing Wronskians
-┌ Info: Computed in 2.914206386 seconds
+┌ Info: Computed in 3.377366118 seconds
 │   :wrnsk_time = :wrnsk_time
-└   wrnsk_time = 2.914206386
+└   wrnsk_time = 3.377366118
 [ Info: Dimensions of the wronskians [40, 18]
-┌ Info: Ranks of the Wronskians computed in 0.026672336 seconds
+┌ Info: Ranks of the Wronskians computed in 0.031212833 seconds
 │   :rank_time = :rank_time
-└   rank_times = 0.026672336
+└   rank_times = 0.031212833
 [ Info: Assessing global identifiability using the coefficients of the io-equations
-┌ Info: Computed in 1.023711558 seconds
+┌ Info: Computed in 1.176097256 seconds
 │   :check_time = :check_time
-└   check_time = 1.023711558
-[ Info: Global identifiability assessed in 13.282503115 seconds
- 45.435123 seconds (79.63 M allocations: 4.609 GiB, 5.76% gc time, 99.18% compilation time)
+└   check_time = 1.176097256
+[ Info: Global identifiability assessed in 15.187419208 seconds
+ 51.035248 seconds (80.82 M allocations: 4.690 GiB, 3.98% gc time, 99.19% compilation time)
 Dict{Nemo.fmpq_mpoly, Symbol} with 10 entries:
   d    =&gt; :globally
   k    =&gt; :nonidentifiable
@@ -75,26 +75,26 @@ v&#39;(t) = k*y(t) - v(t)*u
 w&#39;(t) = -b*w(t) + c*w(t)*x(t)*y(t) - c*w(t)*q*y(t)
 y2(t) = z(t)
 y1(t) = w(t)</code><br/><code class="language-julia-repl hljs" style="display:block;">julia&gt; @time global_id = assess_identifiability(ode, 0.99)</code><code class="nohighlight hljs ansi" style="display:block;">[ Info: Assessing local identifiability
-[ Info: Local identifiability assessed in 0.082477286 seconds
+[ Info: Local identifiability assessed in 0.083655357 seconds
 [ Info: Assessing global identifiability
 [ Info: Computing IO-equations
-┌ Info: Computed in 0.166726388 seconds
+┌ Info: Computed in 0.054438562 seconds
 │   :ioeq_time = :ioeq_time
-└   ioeq_time = 0.166726388
+└   ioeq_time = 0.054438562
 [ Info: Computing Wronskians
-┌ Info: Computed in 0.047539595 seconds
+┌ Info: Computed in 0.0549014 seconds
 │   :wrnsk_time = :wrnsk_time
-└   wrnsk_time = 0.047539595
+└   wrnsk_time = 0.0549014
 [ Info: Dimensions of the wronskians [40, 18]
-┌ Info: Ranks of the Wronskians computed in 0.000139402 seconds
+┌ Info: Ranks of the Wronskians computed in 0.000153012 seconds
 │   :rank_time = :rank_time
-└   rank_times = 0.000139402
+└   rank_times = 0.000153012
 [ Info: Assessing global identifiability using the coefficients of the io-equations
-┌ Info: Computed in 0.024250702 seconds
+┌ Info: Computed in 0.034215605 seconds
 │   :check_time = :check_time
-└   check_time = 0.024250702
-[ Info: Global identifiability assessed in 0.239457693 seconds
-  0.322406 seconds (1.95 M allocations: 148.544 MiB, 25.81% gc time, 6.50% compilation time)
+└   check_time = 0.034215605
+[ Info: Global identifiability assessed in 0.144543249 seconds
+  0.228679 seconds (1.95 M allocations: 148.509 MiB, 9.63% compilation time)
 Dict{Nemo.fmpq_mpoly, Symbol} with 10 entries:
   d    =&gt; :globally
   k    =&gt; :nonidentifiable
@@ -105,4 +105,4 @@ Dict{Nemo.fmpq_mpoly, Symbol} with 10 entries:
   lm   =&gt; :nonidentifiable
   b    =&gt; :globally
   c    =&gt; :nonidentifiable
-  h    =&gt; :globally</code></pre><p>Indeed, notice how much quicker we obtained the result with 99% correctness guarantee! This illustrates the fact that you may sometimes sacrifice probability slightly to get results much faster.</p><section class="footnotes is-size-7"><ul><li class="footnote" id="footnote-1"><a class="tag is-link" href="#citeref-1">1</a><blockquote><p>D. Wodarz, M. Nowak, <a href="https://doi.org/10.1073/pnas.96.25.14464"><em>Specific therapy regimes could lead to long-term immunological control of HIV</em></a>, PNAS December 7, 1999 96 (25) 14464-14469;</p></blockquote></li></ul></section></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../local_identifiability/">« Local Identifiability of Differential Models</a><a class="docs-footer-nextpage" href="../../input/input/">Parsing input ODE system »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.10 on <span class="colophon-date" title="Friday 10 December 2021 20:08">Friday 10 December 2021</span>. Using Julia version 1.7.0.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+  h    =&gt; :globally</code></pre><p>Indeed, notice how much quicker we obtained the result with 99% correctness guarantee! This illustrates the fact that you may sometimes sacrifice probability slightly to get results much faster.</p><section class="footnotes is-size-7"><ul><li class="footnote" id="footnote-1"><a class="tag is-link" href="#citeref-1">1</a><blockquote><p>D. Wodarz, M. Nowak, <a href="https://doi.org/10.1073/pnas.96.25.14464"><em>Specific therapy regimes could lead to long-term immunological control of HIV</em></a>, PNAS December 7, 1999 96 (25) 14464-14469;</p></blockquote></li></ul></section></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../local_identifiability/">« Local Identifiability of Differential Models</a><a class="docs-footer-nextpage" href="../../input/input/">Parsing input ODE system »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.10 on <span class="colophon-date" title="Friday 10 December 2021 22:39">Friday 10 December 2021</span>. Using Julia version 1.7.0.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
